// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Circle renders correctly 1`] = `
<DocumentFragment>
  <div
    class="circle-picker "
    style="width: 252px; display: flex; flex-wrap: wrap; margin-right: -14px; margin-bottom: -14px;"
  >
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #f44336; box-shadow: inset 0 0 0 15px #f44336; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#f44336"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #e91e63; box-shadow: inset 0 0 0 15px #e91e63; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#e91e63"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #9c27b0; box-shadow: inset 0 0 0 15px #9c27b0; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#9c27b0"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #673ab7; box-shadow: inset 0 0 0 15px #673ab7; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#673ab7"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #3f51b5; box-shadow: inset 0 0 0 15px #3f51b5; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#3f51b5"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #2196f3; box-shadow: inset 0 0 0 15px #2196f3; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#2196f3"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #03a9f4; box-shadow: inset 0 0 0 15px #03a9f4; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#03a9f4"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #00bcd4; box-shadow: inset 0 0 0 15px #00bcd4; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#00bcd4"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #009688; box-shadow: inset 0 0 0 15px #009688; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#009688"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #4caf50; box-shadow: inset 0 0 0 15px #4caf50; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#4caf50"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #8bc34a; box-shadow: inset 0 0 0 15px #8bc34a; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#8bc34a"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #cddc39; box-shadow: inset 0 0 0 15px #cddc39; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#cddc39"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #ffeb3b; box-shadow: inset 0 0 0 15px #ffeb3b; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#ffeb3b"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #ffc107; box-shadow: inset 0 0 0 15px #ffc107; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#ffc107"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #ff9800; box-shadow: inset 0 0 0 15px #ff9800; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#ff9800"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #ff5722; box-shadow: inset 0 0 0 15px #ff5722; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#ff5722"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #795548; box-shadow: inset 0 0 0 15px #795548; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#795548"
          />
        </span>
      </div>
    </span>
    <span>
      <div
        style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
      >
        <span>
          <div
            style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-box-shadow: inset 0 0 0 15px #607d8b; box-shadow: inset 0 0 0 15px #607d8b; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
            tabindex="0"
            title="#607d8b"
          />
        </span>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`CircleSwatch renders correctly 1`] = `
<DocumentFragment>
  <span>
    <div
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
    >
      <span>
        <div
          style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
          tabindex="0"
        />
      </span>
    </div>
  </span>
</DocumentFragment>
`;

exports[`CircleSwatch renders with sizing and spacing 1`] = `
<DocumentFragment>
  <span>
    <div
      style="width: 40px; height: 40px; margin-right: 40px; margin-bottom: 40px; -webkit-transform: scale(1); transform: scale(1); -webkit-transition: 100ms transform ease; transition: 100ms transform ease;"
    >
      <span>
        <div
          style="background: transparent; height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 50%; border-radius: 50%; -webkit-transition: 100ms box-shadow ease; transition: 100ms box-shadow ease;"
          tabindex="0"
        />
      </span>
    </div>
  </span>
</DocumentFragment>
`;
